--- a/client/package.json
+++ b/client/package.json
@@ -5,18 +5,19 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
-    "prop-types": "^15.6.2",
     "bootstrap": "3.3.7",
     "chartist": "0.10.1",
     "node-sass": "4.6.1",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "4.1.2",
+    "prop-types": "^15.6.2",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
     "react-bootstrap": "0.32.1",
-    "react-router-dom": "^4.3.1",
     "react-chartist": "0.13.1",
-    "react-scripts": "1.0.14"
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.0.14",
+    "recharts": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
