--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-draggable": "^3.0.5",
     "react-materialize": "^2.3.3",
     "react-notification-system": "^0.2.17",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "recharts": "^1.3.3"
   }
 }
