--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.14",
+    "react-tagcloud": "^1.3.0",
     "recharts": "^1.3.3"
   },
   "scripts": {
