--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-materialize": "^2.3.3",
     "react-notification-system": "^0.2.17",
     "react-router-dom": "^4.3.1",
+    "react-tagcloud": "^1.3.0",
     "recharts": "^1.3.3"
   }
 }
