--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.17.2",
     "classnames": "^2.2.6",
     "create-react-class": "^15.6.3",
+    "csvtojson": "^2.0.8",
     "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.15.4",
     "immutability-helper": "^2.7.1",
