--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "3.3.7",
     "chartist": "0.10.1",
     "express-fileupload": "^1.0.0",
+    "moment": "^2.22.2",
     "node-sass": "4.6.1",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "4.1.2",
