--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.0.0",
     "react-bootstrap": "0.32.1",
     "react-chartist": "0.13.1",
+    "react-csv-reader": "^1.1.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.14"
