--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "classnames": "^2.2.6",
     "create-react-class": "^15.6.3",
     "csvtojson": "^2.0.8",
+    "dotenv": "^6.1.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.15.4",
     "express-fileupload": "^1.0.0",
     "immutability-helper": "^2.7.1",
     "jsonwebtoken": "^8.3.0",
-    "moment": "^2.22.2",
     "jspdf": "^1.4.1",
+    "moment": "^2.22.2",
     "mongoose": "^5.0.11",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
